# eds-migration

./: .env.example  .eslintignore  .eslintrc.js  .gitignore  .hlxignore  CLAUDE.md  README.md  fstab.yaml  helix-query.yaml  helix-sitemap.yaml  pyproject.toml  robots.txt
.eds-migration/: checkpoint.json
.eds-migration/state/: block-inventory.json  blueprint.json  manifest.json  pending-patterns.json  qa-report.json  sample-scrape.json
.eds-migration/verifier-results/: analyzer.json  block_dev.json  block_dev_retry1.json  config.json  crawler.json  pilot.json
blocks/accordion/: accordion.css  accordion.js
blocks/breadcrumbs/: breadcrumbs.css  breadcrumbs.js
blocks/cards/: cards.css  cards.js
blocks/carousel/: carousel.css  carousel.js
blocks/columns/: columns.css  columns.js
blocks/content-filter/: content-filter.css  content-filter.js
blocks/embed/: embed.css  embed.js
blocks/fragment/: fragment.js
blocks/hero/: hero.css  hero.js
blocks/hubspot-form/: hubspot-form.css  hubspot-form.js
blocks/icon-grid/: icon-grid.css  icon-grid.js
blocks/modal/: modal.css  modal.js
blocks/profile/: profile.css  profile.js
blocks/quote/: quote.css  quote.js
blocks/search/: search.css  search.js
blocks/stats/: stats.css  stats.js
blocks/table/: table.css  table.js
docs/: MIGRATION-REPORT.md  migration-agent-architecture.md  migration-architecture-diagram.html
eds_migrate/: __main__.py  agents.py  router.py  session.py  state_workspace.py  tier1.py
scripts/: delayed.js  scripts.js
styles/: fonts.css  lazy-styles.css  styles.css
(+176 files in other folders)
